[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/TeamPicker.gd" type="Script" id=1]
[ext_resource path="res://Scenes/a font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Textures/headIcon.jpg" type="Texture" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 1 )

[node name="ModeLabel" type="Label" parent="ColorRect"]
margin_left = 415.403
margin_top = 13.2689
margin_right = 645.403
margin_bottom = 80.2689
custom_fonts/font = ExtResource( 2 )
text = "Mode:"
align = 2

[node name="LeftButtonMode" type="Button" parent="ColorRect/ModeLabel"]
margin_left = 240.61
margin_top = 8.12247
margin_right = 302.61
margin_bottom = 64.1225
icon = ExtResource( 3 )

[node name="RightButtonMode" type="Button" parent="ColorRect/ModeLabel"]
margin_left = 328.61
margin_top = 8.12247
margin_right = 390.61
margin_bottom = 64.1225
icon = ExtResource( 3 )

[node name="ModeText" type="Label" parent="ColorRect/ModeLabel"]
margin_left = 416.0
margin_right = 646.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 2 )
text = "International"
align = 1

[node name="GenderLabel" type="Label" parent="ColorRect"]
visible = false
margin_left = 415.403
margin_top = 13.2689
margin_right = 645.403
margin_bottom = 80.2689
custom_fonts/font = ExtResource( 2 )
text = "Mode:"
align = 2

[node name="LeftButtonGender" type="Button" parent="ColorRect/GenderLabel"]
margin_left = 240.61
margin_top = 8.12247
margin_right = 302.61
margin_bottom = 64.1225
icon = ExtResource( 3 )

[node name="RightButtonGender" type="Button" parent="ColorRect/GenderLabel"]
margin_left = 328.61
margin_top = 8.12247
margin_right = 390.61
margin_bottom = 64.1225
icon = ExtResource( 3 )

[node name="ModeText" type="Label" parent="ColorRect/GenderLabel"]
margin_left = 416.0
margin_right = 646.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 2 )
text = "International"
align = 1

[node name="ContinentLabel" type="Label" parent="ColorRect"]
margin_left = 415.403
margin_top = 252.269
margin_right = 645.403
margin_bottom = 319.269
custom_fonts/font = ExtResource( 2 )
text = "Continent:"
align = 2

[node name="ContinentText" type="Label" parent="ColorRect/ContinentLabel"]
margin_left = 400.0
margin_right = 632.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 2 )
text = "Antarctica"
align = 1

[node name="LeftButtonContinent" type="Button" parent="ColorRect/ContinentLabel/ContinentText"]
margin_left = -159.39
margin_top = 1.12247
margin_right = -97.3896
margin_bottom = 57.1225
icon = ExtResource( 3 )

[node name="RightButtonContinent" type="Button" parent="ColorRect/ContinentLabel/ContinentText"]
margin_left = -71.3896
margin_top = 1.12247
margin_right = -9.38959
margin_bottom = 57.1225
icon = ExtResource( 3 )

[node name="NationLabel" type="Label" parent="ColorRect"]
margin_left = 415.403
margin_top = 303.269
margin_right = 645.403
margin_bottom = 370.269
custom_fonts/font = ExtResource( 2 )
text = "Nation:"
align = 2

[node name="NationText" type="Label" parent="ColorRect/NationLabel"]
margin_left = 400.0
margin_right = 630.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 2 )
text = "Penguins"
align = 1

[node name="LeftButtonNation" type="Button" parent="ColorRect/NationLabel/NationText"]
margin_left = -159.39
margin_top = 6.12244
margin_right = -97.3896
margin_bottom = 62.1224
icon = ExtResource( 3 )

[node name="RightButtonNation" type="Button" parent="ColorRect/NationLabel/NationText"]
margin_left = -71.3896
margin_top = 6.12244
margin_right = -9.38959
margin_bottom = 62.1224
icon = ExtResource( 3 )

[node name="ClubLabel" type="Label" parent="ColorRect"]
margin_left = 415.403
margin_top = 354.269
margin_right = 645.403
margin_bottom = 421.269
custom_fonts/font = ExtResource( 2 )
text = "Club:"
align = 2

[node name="ClubText" type="Label" parent="ColorRect/ClubLabel"]
margin_left = 400.0
margin_right = 1252.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 2 )
text = "sadfasdfhl;sdfkla;hlsdkhflasdkhlkshdf"
align = 1

[node name="LeftButtonClub" type="Button" parent="ColorRect/ClubLabel/ClubText"]
margin_left = -159.39
margin_top = 14.1224
margin_right = -97.3896
margin_bottom = 70.1224
icon = ExtResource( 3 )

[node name="RightButtonClub" type="Button" parent="ColorRect/ClubLabel/ClubText"]
margin_left = -71.3896
margin_top = 14.1224
margin_right = -9.38959
margin_bottom = 70.1224
icon = ExtResource( 3 )

[connection signal="pressed" from="ColorRect/ModeLabel/LeftButtonMode" to="." method="_on_ButtonMode_pressed"]
[connection signal="pressed" from="ColorRect/ModeLabel/RightButtonMode" to="." method="_on_ButtonMode_pressed"]
[connection signal="pressed" from="ColorRect/GenderLabel/LeftButtonGender" to="." method="_on_ButtonMode_pressed"]
[connection signal="pressed" from="ColorRect/GenderLabel/RightButtonGender" to="." method="_on_ButtonMode_pressed"]
